# flask_project

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
blog/: __init__.py  app.py  auth.py  commands.py  config.py  database.py  database_commands.py  extensions.py  models.py  views.py
blog/admin/: __init__.py  views.py
blog/api/: article.py  author.py  tag.py  user.py
blog/api/permissions/: user.py
blog/article/: views.py
blog/articles/: views.py
blog/authors/: views.py
blog/forms/: article.py  users.py
blog/schemas/: __init__.py  articles.py  author.py
blog/templates/: base.html  navbar.html
blog/templates/articles/: detail.html  edit.html  list.html
blog/templates/articles/tags/: get_articles.html  list.html
blog/templates/auth/: login.html  registration.html
blog/templates/authors/: list.html
blog/templates/macro/: formhelpers.html
blog/templates/users/: detail.html  list.html  profile.html
blog/user/: views.py
blog/users/: views.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  requirements.txt
flask_project/: app.py
migrations/versions/: 0d969c99d48f_.py  0f07936992ff_create_user_model.py  17e0a2964d4d_.py  b99f2a5caea7_.py  d6c0efabb1f1_.py  d7e1ac47683f_.py
